WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305659
Fix PCM attribution reports not sent after system sleep/wake cycles
https://bugs.webkit.org/show_bug.cgi?id=305659
Summary
Fix PCM attribution reports not sent after system sleep/wake cycles
Pouneh
Reported
2026-01-16 11:52:45 PST
PCM attribution reports were not being sent when the device went to sleep before the scheduled fire time.
Attachments
Add attachment
proposed patch, testcase, etc.
Pouneh
Comment 1
2026-01-16 11:58:46 PST
<
rdar://problem/167733375
>
Pouneh
Comment 2
2026-01-16 11:59:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56731
EWS
Comment 3
2026-01-16 17:05:42 PST
Committed
305750@main
(078a4e83ca88): <
https://commits.webkit.org/305750@main
> Reviewed commits have been landed. Closing PR #56731 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug