Cherry-pick 078a4e83ca88. rdar://168342787

[Private Click Measurement] Fix PCM attribution reports not sent after system sleep/wake cycles
    https://bugs.webkit.org/show_bug.cgi?id=305659
    rdar://167733375

    Reviewed by Alex Christensen and Matthew Finkel.

    PCM attribution reports were not being sent when the device went to sleep
    before the scheduled fire time. The issue is that a timer is not reliably
    fired after we wake from sleep, even if it should’ve fired in the past.
    This prevents sending overdue attribution reports.

    This fix adds SystemWillSleep/SystemDidWake IPC messages to NetworkProcess
    and updates WebProcessPool to send these notifications to NetworkProcess
    during system sleep/wake events. On wake, NetworkProcess checks for overdue
    PCM attributions and restarts timers.

    * Source/WebKit/NetworkProcess/NetworkProcess.cpp:
    (WebKit::NetworkProcess::systemDidWake):
    * Source/WebKit/NetworkProcess/NetworkProcess.h:
    * Source/WebKit/NetworkProcess/NetworkProcess.messages.in:
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManager.cpp:
    (WebKit::PrivateClickMeasurementManager::checkAttributionTimer):
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManager.h:
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManagerInterface.h:
    (WebKit::PCM::ManagerInterface::checkAttributionTimer):
    * Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
    (WebKit::WebProcessPool::systemDidWake):

    Canonical link: https://commits.webkit.org/305750@main

Identifier: 305413.73@safari-7624-branch